--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,14 +1,29 @@
+%flex-centered {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
 .app-tabs {
   .mat-tab-labels {
     justify-content: center;
   }
 
   .mat-tab-body-content {
-    height: calc(100vh - 56px);
+    height: calc(100vh - 60px);
+    @extend %flex-centered;
+
+    > * {
+      height: 100%;
+      width: 100%;
+      padding: 16px;
+      @extend %flex-centered;
+    }
   }
 
   .mat-tab-label-content {
-    font-size: 1.2em;
+    font-size: 1.5em;
     font-weight: 600;
 
     .mat-icon {
