--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
-@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+@import '~@angular/material/theming';
+@include mat-core();
+$app-primary: mat-palette($mat-blue-grey);
+$app-accent:  mat-palette($mat-teal, A200, A100, A400);
+$app-warn:    mat-palette($mat-red);
+$app-theme: mat-dark-theme($app-primary, $app-accent, $app-warn);
+@include angular-material-theme($app-theme);
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  margin: 0
+  margin: 0;
 }
