--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-tabs">
-  <mat-tab-group headerPosition="below" color="primary" [selectedIndex]="3">
+  <mat-tab-group headerPosition="above" color="primary" [selectedIndex]="2">
 
     <mat-tab>
         <ng-template mat-tab-label>
@@ -44,7 +44,7 @@
     <mat-tab>
         <ng-template mat-tab-label>
           <mat-icon>chat_bubble_outline</mat-icon>
-          Contact Me
+          Get In Touch
         </ng-template>
         <ng-template matTabContent>
             <app-contact-me></app-contact-me>
