--- a/src/app/tabs/about-me/about-me.component.html
+++ b/src/app/tabs/about-me/about-me.component.html
@@ -1,13 +1,21 @@
-<div class="content mat-elevation-z2">
-  <mat-vertical-stepper [linear]="isLinear" #stepper>
+<div class="content mat-elevation-z4" fxLayout="column">
+    <div fxFlex fxLayout="row">
+        <div fxFlex fxLayout="row" fxLayoutAlign="center center">
+            <p [innerHTML]="summary" class="text"></p>
+        </div>
+        <div fxFlex class="big-side-label mat-elevation-z1"></div>
+    </div>
+    <div fxFlex fxLayout="row">
+        <div fxFlex  class="big-side-label mat-elevation-z1"></div>
+        <div fxFlex fxLayout="row" fxLayoutAlign="center center">
+            <p [innerHTML]="hobbies" class="text"></p>
+        </div>
+    </div>
 
-      <mat-step>
-          <ng-template matStepLabel>General Information</ng-template>
-      </mat-step>
-
-      <mat-step>
-          <ng-template matStepLabel>Educational Background</ng-template>
-      </mat-step>
-
-  </mat-vertical-stepper>
+    <div fxFlex fxLayout="row">
+        <div fxFlex fxLayout="row" fxLayoutAlign="center center">
+            <p [innerHTML]="availability" class="text"></p>
+        </div>
+        <div fxFlex  class="big-side-label mat-elevation-z1"></div>
+    </div>
 </div>
