--- a/src/app/tabs/work-experience/work-experience.component.scss
+++ b/src/app/tabs/work-experience/work-experience.component.scss
@@ -12,6 +12,20 @@
   .details {
     position: relative;
 
+    .responsibilities {
+      p {
+        margin: 0;
+        &.label {
+          margin: 8px 0;
+          font-weight: 600;
+        }
+      }
+
+      ul {
+        padding: 0 20px;
+      }
+    }
+
     .duration {
       position: absolute;
       bottom: 0;
