--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-
 @import '~@angular/material/theming';
 @include mat-core();
-$app-primary: mat-palette($mat-blue-grey);
-$app-accent:  mat-palette($mat-teal, A200, A100, A400);
+
+$app-primary: mat-palette($mat-teal);
+$app-accent:  mat-palette($mat-blue-grey, A200, A100, A400);
 $app-warn:    mat-palette($mat-red);
-$app-theme: mat-dark-theme($app-primary, $app-accent, $app-warn);
+$app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
+
 @include angular-material-theme($app-theme);
 
 * {
