--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
 
 <div class="app" fxLayout="row" fxLayoutAlign="space-between center">
 
-  <div class="console"></div>
-  <div class="info"></div>
+  <div fxFlex>
+    <app-main> </app-main>
+  </div>
+  <div class="console" fxFlex></div>
 
 </div>
