--- a/src/app/scss/_theme.scss
+++ b/src/app/scss/_theme.scss
@@ -1,11 +1,11 @@
 @import '~@angular/material/theming';
-@include mat-core();
 
 $app-primary: mat-palette($mat-grey, 900);
-$app-accent:  mat-palette($mat-blue, 900);
+$app-accent:  mat-palette($mat-deep-orange, 900);
 $app-warn:    mat-palette($mat-red);
 $app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
 
+@include mat-core();
 @include angular-material-theme($app-theme);
 
 .bg-header {
@@ -14,7 +14,32 @@ $app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
 }
 
 .app {
-  .info {
+  .main {
+    .jp6-h1 {
+      p {
+        color: white;
+        background: map-get($mat-green, 900);
+      }
+
+      &.content {
+        p {
+          color: map-get($mat-green, 900);
+          background: map-get($app-primary, 50);
+        }
+      }
+    }
+
+    .top {
+      .go-get {
+        .ws {
+          color: map-get($mat-blue, 500);
+        }
+      }
+    }
+  }
+
+  .console {
+    background: map-get($mat-blue-grey, 900);
     @include mat-elevation(8);
   }
 }
