--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,21 +1,11 @@
 <div class="main" fxLayout="column">
   <div class="top" fxFlex>
-    <div class="jp6-h1">
-        <p>&lt;jp6rt&gt;</p>
-    </div>
-    <div fxLayout="row" fxLayoutAlign="start center" class="go-get">
-      <div class="ws">
-        <p>&gt; $</p>
-      </div>
-      <div class="cmd">
-        <p>go get -u -d jp6rt.xx/jp6rt --hire</p>
-      </div>
-    </div>
+    <app-top></app-top>
   </div>
 
   <div class="content" fxFlex fxLayout="column">
     <div fxFlex></div>
-    <div class="jp6-h1 content mat-app-background">
+    <div class="jp6-h1 close">
       <p>&lt;/jp6rt&gt;</p>
     </div>
   </div>
