--- a/src/app/main/top/top.component.html
+++ b/src/app/main/top/top.component.html
@@ -9,3 +9,12 @@
     <p>go get -u -d jp6rt.xx/jp6rt --hire</p>
   </div>
 </div>
+
+<div fxLayout="row" fxLayoutAlign="start center" class="tech-badges">
+  <mat-icon svgIcon="golang"></mat-icon>
+  <mat-icon svgIcon="nodejs"></mat-icon>
+  <mat-icon svgIcon="angular"></mat-icon>
+  <mat-icon svgIcon="aws"></mat-icon>
+  <mat-icon svgIcon="docker"></mat-icon>
+  <mat-icon svgIcon="mongodb"></mat-icon>
+</div>
