--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,6 @@
   <div fxFlex>
     <app-main> </app-main>
   </div>
-  <div class="console" fxFlex></div>
+  <!--<div class="console" fxFlex></div>-->
 
 </div>
