--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,12 +1,10 @@
 <div class="main" fxLayout="column">
-  <div class="top" fxFlex>
+  
+  <div class="top">
     <app-top></app-top>
   </div>
 
-  <div class="content" fxFlex fxLayout="column">
-    <div fxFlex></div>
-    <div class="jp6-h1 close">
-      <p>&lt;/jp6rt&gt;</p>
-    </div>
+  <div class="content" fxFlex>
+   <app-content></app-content>
   </div>
 </div>
