--- a/src/app/main/top/top.component.html
+++ b/src/app/main/top/top.component.html
@@ -18,3 +18,15 @@
   <mat-icon svgIcon="docker"></mat-icon>
   <mat-icon svgIcon="mongodb"></mat-icon>
 </div>
+
+<div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="12px">
+  <button mat-raised-button color="primary">
+    <mat-icon>sms</mat-icon>
+    Message
+  </button>
+
+  <button mat-raised-button color="primary">
+    <mat-icon svgIcon="github"></mat-icon>
+    Github
+  </button>
+</div>
