--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,7 @@
+@import "src/app/scss/variables";
+
 .bg-header {
-  height: 50vh;
+  height: $top-height;
   width: 100vw;
   position: absolute;
   top: 0;
@@ -11,13 +13,13 @@
   position: absolute;
   z-index: 2;
   width: 95vw;
-  height: 90vh;
+  min-height: 90vh;
   position: 0;
   left: calc(50% - 47.5vw);
   top: 5vh;
 
   .main {
-    height: 90vh;
+    min-height: 90vh;
   }
 
   .console {
