--- a/src/app/main/stack/stack.component.scss
+++ b/src/app/main/stack/stack.component.scss
@@ -1,4 +1,5 @@
 .stack {
+  width: 1000px;
 
   .info {
     h1, p {
@@ -22,7 +23,7 @@
 }
 
 .stack-bottom {
-  width: 75%;
+  width: 50%;
   height: 1px;
   opacity: 0.25;
 }
