--- a/src/app/main/top/top.component.html
+++ b/src/app/main/top/top.component.html
@@ -25,7 +25,7 @@
     Message
   </button>
 
-  <button mat-raised-button color="primary">
+  <button mat-raised-button color="primary" (click)="openGithub()">
     <mat-icon svgIcon="github"></mat-icon>
     Github
   </button>
