--- a/src/app/main/top/top.component.html
+++ b/src/app/main/top/top.component.html
@@ -20,7 +20,7 @@
 </div>
 
 <div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="12px">
-  <button mat-raised-button color="primary">
+  <button mat-raised-button color="primary" (click)="openMessage()">
     <mat-icon>sms</mat-icon>
     Message
   </button>
