--- a/src/app/main/stack/stack.component.html
+++ b/src/app/main/stack/stack.component.html
@@ -1,4 +1,4 @@
-  <div fxLayout="row" class="stack" [class.position-1]="stack.position">
+  <div fxLayout="row" class="stack" [class.position-1]="stack.position" fxLayoutAlign="center center">
     <ng-container *ngIf="stack.position">
       <div class="info" fxLayout="column" fxLayoutAlign="center start" fxFlex>
         <h1>{{ stack.header }}</h1> 
