--- a/src/app/main/top/top.component.html
+++ b/src/app/main/top/top.component.html
@@ -19,7 +19,7 @@
   <mat-icon svgIcon="mongodb"></mat-icon>
 </div>
 
-<div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="12px">
+<div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="12px" class="actions">
   <button mat-raised-button color="primary" (click)="openMessage()">
     <mat-icon>sms</mat-icon>
     Message
