--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -29,6 +29,17 @@
         @include resize-mat-icon(48px);
       }
     }
+
+    @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+      .mat-icon {
+        @include resize-mat-icon(24px);
+        margin-right: 12px;
+  
+        svg {
+          @include resize-mat-icon(24px);
+        }
+      }
+    }
   }
 
   .stack .mat-icon {
