--- a/src/app/main/stack/stack.component.scss
+++ b/src/app/main/stack/stack.component.scss
@@ -1,5 +1,6 @@
 .stack {
   width: 1000px;
+  margin-top: 12px;
 
   .info {
     h1, p {
@@ -27,3 +28,29 @@
   height: 1px;
   opacity: 0.25;
 }
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  .stack {
+    flex-direction: column !important;
+    width: 90vw;
+
+    .info {
+      align-items: center !important;
+
+      h1, p {
+        padding: 0 0 24px 0;
+      }
+
+      p {
+        text-align: center;
+      }
+    }
+  }
+}
+
+@media only screen and (max-device-width : 1024px) {
+  .stack {
+    width: 90vw;
+  }
+}
+
