Add google font

--- a/src/app/main/stack/stack.component.scss
+++ b/src/app/main/stack/stack.component.scss
@@ -1,6 +1,7 @@
 .stack {
   width: 1000px;
   margin-top: 12px;
+  font-family: 'Ubuntu', sans-serif;
 
   .info {
     h1, p {
@@ -10,7 +11,7 @@
     }
 
     p {
-      font-size: 16px;   
+      font-size: 16px;
     }
   }
 
